Closed Bug 20063 Opened 25 years ago Closed 25 years ago

[PP] linux only - Save As Template prompts error when saving IMAP Inbox to IMAP Template

Categories

(MailNews Core :: Backend, defect, P3)

x86
Linux

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: esther, Assigned: jefft)

Details

Using build 1999112409m12 on linux only, when you try to save a selected message
as a template you will get an error message "The current command did not
succeed.  The mail server responded:nMessage contains bare newlines".  This does
not happens if you Save As Template to a Local folder on linux.  Mac and Windows
OK.

1. Launch messenger  (select a profile with IMAP)
2. If not set up already, set your Template folder to one on your IMAP account
through Account Setup - Copies and Folders.
3. Select a message in your IMAP inbox
4. From the File menu list select Save As|Template

Result: you get the error message stated above and message doesn't save
Expected: Message to be moved to the IMAP Template folder.
QA Contact: lchiang → esther
Note this is the left over of a bug that will be verified (10801).
Hardware: HP → PC
Status: NEW → ASSIGNED
Target Milestone: M12
We are not correctly have the right format of the message to append to the imap
server.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Make sure we are having correct line endings when appending message to template
folder. nsImapProtocol.cpp modified.
Status: RESOLVED → VERIFIED
Using build 1999120109m12 on win98 and linux and build 19991201m12 on Mac this
is fixed.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.