fixed bug 20063 -- Linux Save Message As Template not working with correct line endings; r=mscott